--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@
 
 # Telegram API
 telegram:
-  api_id: "32569374"  # Получить на https://my.telegram.org
-  api_hash: "f148c2e36cf3ee93a47aade5520bd8bc"  # Получить на https://my.telegram.org
+  api_id: "32569374"
+  api_hash: "f148c2e36cf3ee93a47aade5520bd8bc"
   phone: "+79216317520"
   session_name: "communication_assistant"
-  clone_dialogs: true  # Клонировать диалоги для обучения
+  clone_dialogs: true
   max_messages_per_dialog: 1000
 
 # Модели
@@ -20,22 +20,18 @@ communication_contexts:
     description: "Деловое, формальное общение"
     emoji: "💼"
     use_cases: ["работа", "коллеги", "начальство", "клиенты"]
-
   - name: "family"
     description: "Семейное, неформальное общение"
     emoji: "👨‍👩‍👧‍👦"
     use_cases: ["родители", "дети", "родственники", "семья"]
-
   - name: "romantic"
     description: "Романтическое общение"
     emoji: "💘"
     use_cases: ["флирт", "отношения", "свидания"]
-
   - name: "friendly"
     description: "Дружеское общение"
     emoji: "👥"
     use_cases: ["друзья", "приятели", "знакомые"]
-
   - name: "creative"
     description: "Креативное, творческое общение"
     emoji: "🎭"
@@ -48,12 +44,13 @@ training:
     min_messages_per_style: 50
     create_style_profile: true
     save_adapters: true
-
   contexts:
     train_all_contexts: true
     context_specific_adapters: true
 
-# Пути
+
 paths:
   style_profiles: "data/style_profiles"
   cloned_data: "data/cloned"
+  adapters_dir: "adapters"
+  logs_dir: "logs"
